kwin: swap order of authors
Most code is mine at this point.

--- a/src/kwin/kcm/about.html
+++ b/src/kwin/kcm/about.html
@@ -3,8 +3,8 @@
 
 <p>
     <b>Authors:</b><br>
-    KWin development team<br>
-    taj_ny
+    taj_ny<br>
+    KWin development team
 </p>
 <p>
     <a href="${repo}">GitHub</a><br>
