{kwin,libgestures}: add stroke gesture

--- a/src/kwin/kcm/about.html
+++ b/src/kwin/kcm/about.html
@@ -1,12 +1,12 @@
 <h2 style="margin: 0">KWin Gestures</h2>
-<p style="margin: 0">Version ${version}</p>
+<p style="margin: 0">Version ${version} | <a href="${repo}">GitHub</a> | <a href="${repo}/blob/main/docs/index.md">Documentation</a></p>
 
 <p>
     <b>Authors:</b><br>
-    KWin development team<br>
     taj_ny
 </p>
 <p>
-    <a href="${repo}">GitHub</a><br>
-    <a href="${repo}/blob/main/docs/configuration.md">Configuration documentation</a>
+    <b>Credits:</b><br>
+    <a href="https://invent.kde.org/plasma/kwin">KWin</a> - Touchpad gesture recognition<br>
+    <a href="https://invent.kde.org/jpetso/strokognition">Strokognition</a>, <a href="https://github.com/dkondor/wstroke">wstroke</a>, <a href="https://github.com/thjaeger/easystroke">easystroke</a> - Stroke gestures
 </p>
