kwin/kcm: update about page

--- a/src/kwin/kcm/about.html
+++ b/src/kwin/kcm/about.html
@@ -7,6 +7,6 @@
 </p>
 <p>
     <b>Credits:</b><br>
-    <a href="https://invent.kde.org/plasma/kwin">KWin</a> - Touchpad gesture recognition<br>
+    <a href="https://invent.kde.org/plasma/kwin">KWin</a> - Gesture handling code (heavily modified and extended)<br>
     <a href="https://invent.kde.org/jpetso/strokognition">Strokognition</a>, <a href="https://github.com/dkondor/wstroke">wstroke</a>, <a href="https://github.com/thjaeger/easystroke">easystroke</a> - Stroke gestures
 </p>
