Revert "kwin/kcm: link to current version's documentation in about page"
This reverts commit d851cd473ea90cbd1052c03d5f5d4f9508e65a4b.

--- a/src/kwin/kcm/about.html
+++ b/src/kwin/kcm/about.html
@@ -1,5 +1,5 @@
 <h2 style="margin: 0">KWin Gestures</h2>
-<p style="margin: 0">Version ${version} | <a href="${repo}">GitHub</a> | <a href="${repo}/blob/v${version}/docs/index.md">Documentation</a></p>
+<p style="margin: 0">Version ${version} | <a href="${repo}">GitHub</a> | <a href="${repo}/blob/main/docs/index.md">Documentation</a></p>
 
 <p>
     <b>Authors:</b><br>
