--- a/src/kwin/kcm/about.html
+++ b/src/kwin/kcm/about.html
@@ -1,4 +1,4 @@
-<h2 style="margin: 0">KWin Gestures</h2>
+<h2 style="margin: 0">Input Actions</h2>
 <p style="margin: 0">Version ${version} | <a href="${repo}">GitHub</a> | <a href="${repo}/blob/main/docs/index.md">Documentation</a></p>
 
 <p>
